--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         </select>
       
       <!-- <input type="date" id="filterDate" oninput="applyFilters()" placeholder="Filtrar por data"> -->
-      <input type="datetime-local" id="filterDate" oninput="applyFilters()" name="datetime">
-
-      <input type="time" id="filterTime" oninput="applyFilters()" placeholder="Filtrar por hora">
+      <input type="datetime-local" id="filterDateAndTime" oninput="applyFilters()" name="datetime">
       <button id="filterClear">LIMPAR FILTROS</button>
       <select id="teste" name="teste">
         <option value="">Quantidade a mostra</option> 
