--- a/OilProject/src/pages/removeProducts.html
+++ b/OilProject/src/pages/removeProducts.html
@@ -24,6 +24,8 @@
       
        <label for="productValue">Informe o valor: <span class="required">*</span></label>
        <input type="number" id="productValue" name="productValue" placeholder="Valor">
+      <label for="productRazao">Informe a razão para Saída: <span class="required">*</span></label>
+       <input type="text" id="productRazao" name="productRazao" placeholder="Razão">
       <button id="buttonRemoveProducts" type="submit">Enviar</button>
     </div>
   </div>
