--- a/OilProject-FrontEnd/src/pages/historyProducts.html
+++ b/OilProject-FrontEnd/src/pages/historyProducts.html
@@ -45,7 +45,7 @@
   <div id="productContainer" class="product-list">
   </div>
   <script src="../js/script.js"></script>
-  <script src="../js/functionCheckbox.js"></script>
+  <script src="../js/functions/functionCheckbox.js"></script>
   <script src="../js/interactions/deleteButton.js"></script>
 </body>
 </html>
