Entrada, saída e venda estão preparadas para as requisições; Os caminhos agora estão no arquivo configRotas.json para facilitar; Adicionado logs e alerts para relatar se um produto foi adicionado ou removido e se houve falha.

--- a/OilProject-FrontEnd/src/pages/addProducts.html
+++ b/OilProject-FrontEnd/src/pages/addProducts.html
@@ -21,6 +21,7 @@
         <option value="Uber">Uber</option>
         <option value="Justos">Justos</option>
         <option value="Carrefour">Carrefour</option>
+        <option value="Sogai">Sogai</option>
       </select>
       <label for="ProductMark">Selecione a Marca: <span class="required">*</span></label>
       <select id="ProductMark" name="ProductMark" required>
@@ -32,6 +33,8 @@
         <option value="Coamo">Coamo</option>
         <option value="Vitaliv">Vitaliv</option>
         <option value="Qualita">Qualita</option>
+        <option value="Sogao-galao">Sogai Galão 18L</option>
+        <option value="Sogai-lata">Sogai Lata 18L</option>
         <option value="VilaVelha">Vila Velha 18L</option>
       </select>
 
@@ -49,6 +52,8 @@
           <option value="Coamo">Coamo</option>
           <option value="Vitaliv">Vitaliv</option>
           <option value="Qualita">Qualita</option>
+          <option value="Sogao-galao">Sogai Galão 18L</option>
+          <option value="Sogai-lata">Sogai Lata 18L</option>
           <option value="VilaVelha">Vila Velha 18L</option>
         </select>
       <label for="ProductsQuantitySecond" class="fade" id="ProductQuantityLabel" style="display: none;">Quantidade do segundo produto: <span class="required">*</span></label>
@@ -64,6 +69,6 @@
     </div>
   </div>
   <script src="../js/interactions/addProducts/addProductForm.js"></script>
-  <script src="../js/addProducts/interactions/addMore.js"></script>
+ <!-- <script src="../js/addProducts/interactions/addMore.js"></script> -->
 </body>
 </html>
