--- a/OilProject-FrontEnd/src/pages/generateRelatory.html
+++ b/OilProject-FrontEnd/src/pages/generateRelatory.html
@@ -15,13 +15,15 @@
     <div class="header-inputs">
       <label for="ProductOption">Informe o relatório necessário: <span class="required">*</span></label>
       <select id="ProductOption" name="ProductOption" required>
-        <option value="entrada">Entradas</option>
-        <option value="saida">Saídas</option>
-        <option value="venda">Vendas</option>
+        <option value="inflow">Entradas</option>
+        <option value="outflow">Saídas</option>
+        <option value="sale">Vendas</option>
+        <option value="all">Todos</option>
       </select> 
 
       <button id="buttonRequestRelatory" type="submit">Baixar</button>
     </div>
   </div>
+  <script src="../js/interactions/relatoryProducts/relatoryProductForm.js"></script>
 </body>
 </html>
