--- a/OilProject-FrontEnd/src/pages/addProducts.html
+++ b/OilProject-FrontEnd/src/pages/addProducts.html
@@ -41,7 +41,7 @@
       <label for="ProductsQuantity">Quantidade: <span class="required">*</span></label>
       <input type="number" id="ProductsQuantity" placeholder="Quantidade:" required>
 
-      <button id="addMore">Incluir</button>
+      <!-- <button id="addMore">Incluir</button> -->
       <label for="ProductMarkSecond" id="ProductMarkLabel" class="fade" style="display: none;">Selecione a Marca: <span class="required">*</span></label>
         <select id="ProductMarkSecond" class="fade" style="display: none;" name="ProductMark" required>
           <option value="">Selecione a Marca</option> 
