--- a/OilProject-FrontEnd/src/pages/historyProducts.html
+++ b/OilProject-FrontEnd/src/pages/historyProducts.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../css/historyPageStyles/box/deleteButtonBox.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
 </head>
@@ -18,6 +19,7 @@
   <div class="header-container">
     <h1>Histórico Compras</h1>
     <div class="header-inputs">
+      <button id="addProduct"> <span class="mdi mdi-plus-box"></span> <span>Adicionar</span> </button>
       <!-- <input type="text" id="filterInput" placeholder="Filtrar por nome" oninput="applyFilters()">
 
       <select id="filterLoja" name="filterLoja">
@@ -44,6 +46,14 @@
   </div>
   <div id="productContainer" class="product-list">
   </div>
+  <script>
+    const btnAddProduct = document.getElementById('addProduct');
+
+btnAddProduct.addEventListener('click', function() {
+    window.location.href = 'addProducts.html';
+});
+
+  </script>
   <script src="../js/interactions/historyProducts/historyProductController.js"></script>
   <script src="../js/functions/functionCheckbox.js"></script>
   <script src="../js/interactions/deleteProducts/deleteProductsButton.js"></script>
