--- a/OilProject-FrontEnd/src/pages/addProducts.html
+++ b/OilProject-FrontEnd/src/pages/addProducts.html
@@ -39,7 +39,7 @@
       </select>
 
       <label for="ProductsQuantity">Quantidade: <span class="required">*</span></label>
-      <input type="number" id="ProductsQuantity" placeholder="Quantidade:" required>
+      <input type="number" id="ProductsQuantity" placeholder="Quantidade:" required step="1" min="1">
 
       <!-- <button id="addMore">Incluir</button> -->
       <label for="ProductMarkSecond" id="ProductMarkLabel" class="fade" style="display: none;">Selecione a Marca: <span class="required">*</span></label>
