--- a/OilProject-FrontEnd/src/pages/registerSell.html
+++ b/OilProject-FrontEnd/src/pages/registerSell.html
@@ -24,10 +24,10 @@
        <input type="text" id="productSellClient" name="productSellClient" placeholder="Nome do cliente" required">
       
        <label for="productQuantity">Informe a quantidade: <span class="required">*</span></label>
-       <input type="number" id="productQuantity" name="productQuantity" placeholder="Quantidade" required>
+       <input type="number" id="productQuantity" name="productQuantity" placeholder="Quantidade" step="1" min="1" required>
       
        <label for="productValue">Informe o valor de venda por unidade: <span class="required">*</span></label>
-       <input type="number" id="productValue" name="productValue" placeholder="Valor">
+       <input type="number" id="productValue" name="productValue" placeholder="Valor" step="0.01" min="0">
       <button id="buttonSellProducts" type="submit">Enviar</button>
     </div>
   </div>
