--- a/OilProject-FrontEnd/src/pages/historyProducts.html
+++ b/OilProject-FrontEnd/src/pages/historyProducts.html
@@ -17,7 +17,10 @@
 
 <body>
   <div class="header-container">
-    <h1>Histórico Compras</h1>
+    <div class="header">
+      <!-- <a href="../../../index.html" class="mdi mdi-home homeButton" id="homeButton"></a> -->
+      <h1>OilProject</h1>
+    </div>
     <div class="header-inputs">
       <button id="addProduct"> <span class="mdi mdi-plus-box"></span> <span>Adicionar</span> </button>
       <!-- <input type="text" id="filterInput" placeholder="Filtrar por nome" oninput="applyFilters()">
