--- a/OilProject-FrontEnd/src/pages/generateRelatory.html
+++ b/OilProject-FrontEnd/src/pages/generateRelatory.html
@@ -6,12 +6,16 @@
   <link rel="stylesheet" href="../css/addPageStyles/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap">
   <title>OilProject</title>
 </head>
 <body>
   <div class="header-container">
-    <h1>OilProject</h1>
+    <div class="header">
+      <a href="../../../index.html" class="mdi mdi-home homeButton" id="homeButton"></a>
+      <h1>OilProject</h1>
+    </div>
     <div class="header-inputs">
       <label for="ProductOption">Informe o relatório necessário: <span class="required">*</span></label>
       <select id="ProductOption" name="ProductOption" required>
