--- a/OilProject-FrontEnd/src/pages/registerSell.html
+++ b/OilProject-FrontEnd/src/pages/registerSell.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/addPageStyles/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap">
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap">
   <title>OilProject</title>
 </head>
+
 <body>
   <div class="header-container">
-    <h1>OilProject</h1>
+    <div class="header">
+      <a href="../../../index.html" class="mdi mdi-home homeButton" id="homeButton"></a>
+      <h1>OilProject</h1>
+    </div>
     <div class="header-inputs">
       <label for="ProductOption">Selecione o produto para venda: <span class="required">*</span></label>
       <select id="ProductOption" name="ProductOption" required>
@@ -20,17 +27,19 @@
         <option value="lata-oleo-18l"">Lata Oléo de Soja 18L</option>
       </select> 
 
-      <label for="productSellClient">Informe o nome do cliente: <span class="required">*</span></label>
-       <input type="text" id="productSellClient" name="productSellClient" placeholder="Nome do cliente" required">
-      
-       <label for="productQuantity">Informe a quantidade: <span class="required">*</span></label>
-       <input type="number" id="productQuantity" name="productQuantity" placeholder="Quantidade" step="1" min="1" required>
-      
-       <label for="productValue">Informe o valor de venda por unidade: <span class="required">*</span></label>
-       <input type="number" id="productValue" name="productValue" placeholder="Valor" step="0.01" min="0">
-      <button id="buttonSellProducts" type="submit">Enviar</button>
+      <label for=" productSellClient">Informe o nome do cliente: <span class="required">*</span></label>
+          <input type="text" id="productSellClient" name="productSellClient" placeholder="Nome do cliente" required">
+
+          <label for="productQuantity">Informe a quantidade: <span class="required">*</span></label>
+          <input type="number" id="productQuantity" name="productQuantity" placeholder="Quantidade" step="1" min="1"
+            required>
+
+          <label for="productValue">Informe o valor de venda por unidade: <span class="required">*</span></label>
+          <input type="number" id="productValue" name="productValue" placeholder="Valor" step="0.01" min="0">
+          <button id="buttonSellProducts" type="submit">Enviar</button>
     </div>
   </div>
   <script src="../js/interactions/sellProducts/sellProductForm.js"></script>
 </body>
+
 </html>
