--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="OilProject-FrontEnd/src/css/addPageStyles/main.css">
+  <link rel="stylesheet" href="OilProject-FrontEnd/src/css/mainPageStyles/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
   <title>OilProject</title>
 </head>
+
 <body>
   <div class="center-container">
-  <div class="header-container">
-    <h1>OilProject</h1>
-  <div class="header-buttonse">
-    <button id="buttonAddProduct">Adicionar</button>
-    <button id="buttonRemoveProduct">Saída</button>
-    <button id="buttonRegisterSell">Registrar venda</button>
-    <button id="buttonRedirectToHistory">Histórico compras</button>
-    <button id="buttonGenerateRelatory">Gerar relatório .CSV</button>
+    <div class="header-container">
+      <h1>OilProject</h1>
+      <div class="header-buttonse">
+        <a href="OilProject-FrontEnd/src/pages/addProducts.html"> <button id="buttonAddProduct">Adicionar</button></a>
+        <a href="OilProject-FrontEnd/src/pages/removeProducts.html"> <button id="buttonRemoveProduct">Saída</button></a>
+        <a href="OilProject-FrontEnd/src/pages/registerSell.html"> <button id="buttonRegisterSell">Registrar
+            venda</button></a>
+        <a href="OilProject-FrontEnd/src/pages/historyProducts.html"> <button id="buttonRedirectToHistory">Histórico
+            compras</button></a>
+        <a href="OilProject-FrontEnd/src/pages/generateRelatory.html"> <button id="buttonGenerateRelatory">Gerar
+            relatório .CSV</button></a>
+      </div>
     </div>
   </div>
-  </div>
-  <script>  
-    document.getElementById('buttonRedirectToHistory').addEventListener('click', function() { window.location.href = 'OilProject-FrontEnd/src/pages/historyProducts.html';  });
-    document.getElementById('buttonRemoveProduct').addEventListener('click', function() { window.location.href = 'OilProject-FrontEnd/src/pages/removeProducts.html';  });
-    document.getElementById('buttonRegisterSell').addEventListener('click', function() { window.location.href = 'OilProject-FrontEnd/src/pages/registerSell.html';  });
-
-    document.getElementById('buttonGenerateRelatory').addEventListener('click', function() { window.location.href = 'OilProject-FrontEnd/src/pages/generateRelatory.html';  });
-
-    document.getElementById('buttonAddProduct').addEventListener('click', function() { window.location.href = 'OilProject-FrontEnd/src/pages/addProducts.html';  });
-  </script>
 </body>
+
 </html>
