Adição de pagina para movimentação, inclusão de encher galão, pretenção para alteração para productID melhoras e etc etc etc

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
     <div class="header-container">
       <h1>OilProject</h1>
       <div class="header-buttonse">
-        <a href="OilProject-FrontEnd/src/pages/addProducts.html"> <button id="buttonAddProduct">Adicionar</button></a>
-        <a href="OilProject-FrontEnd/src/pages/removeProducts.html"> <button id="buttonRemoveProduct">Saída</button></a>
-        <a href="OilProject-FrontEnd/src/pages/registerSell.html"> <button id="buttonRegisterSell">Registrar
-            venda</button></a>
+        <a href="OilProject-FrontEnd/src/pages/moviProducts.html"> <button id="moviProducts">Movimentações</button></a>
         <a href="OilProject-FrontEnd/src/pages/historyProducts.html"> <button id="buttonRedirectToHistory">Histórico
             compras</button></a>
         <a href="OilProject-FrontEnd/src/pages/generateRelatory.html"> <button id="buttonGenerateRelatory">Gerar
             relatório .CSV</button></a>
+
       </div>
     </div>
   </div>
