--- a/OilProject-FrontEnd/src/pages/addProducts.html
+++ b/OilProject-FrontEnd/src/pages/addProducts.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap">
-  <title>OilProject</title>
+  <title>OilProject - Entrada</title>
 </head>
 
 <body>
   <div class="header-container">
     <div class="header">
     <a href="../../../index.html" class="mdi mdi-home homeButton" id="homeButton"></a>
-    <h1>OilProject</h1>
+    <h1 class="title">OilProject</h1>
   </div>
     <div class="header-inputs">
       <label for="ProductPlace">Selecione a Loja: <span class="required">*</span></label>
@@ -29,6 +29,7 @@
         <option value="Justos">Justos</option>
         <option value="Carrefour">Carrefour</option>
         <option value="Sogai">Sogai</option>
+        <option value="Outros">Outros</option>
       </select>
       <label for="ProductMark">Selecione a Marca: <span class="required">*</span></label>
       <select id="ProductMark" name="ProductMark" required>
@@ -75,7 +76,7 @@
 
       <label for="ProductImage">Foto da Nota Fiscal: <span class="required">*</span></label>
       <input type="file" id="ProductImage" name="ProductImage" accept="image/*" required>
-      <button id="buttonAddProducts" type="submit">Enviar</button>
+      <button id="buttonAddProducts" type="submit">Registrar</button>
     </div>
   </div>
   <script src="../js/interactions/addProducts/addProductForm.js"></script>
