--- a/OilProject-FrontEnd/src/pages/registerGallon.html
+++ b/OilProject-FrontEnd/src/pages/registerGallon.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap">
-  <title>OilProject - Relatório</title>
+  <title>OilProject - Encher</title>
 </head>
 <body>
   <div class="header-container">
@@ -17,17 +17,20 @@
       <h1 class="title">OilProject</h1>
     </div>
     <div class="header-inputs">
-      <label for="ProductOption">Informe o relatório necessário: <span class="required">*</span></label>
-      <select id="ProductOption" name="ProductOption" required>
-        <option value="inflow">Entradas</option>
-        <option value="outflow">Saídas</option>
-        <option value="sale">Vendas</option>
-        <option value="all">Todos</option>
-      </select> 
 
-      <button id="buttonRequestRelatory" type="submit">Registrar</button>
+        <label for="ProductOption">Informe o modelo: <span class="required">*</span></label>
+        <select id="ProductOption" name="ProductOption" required>
+          <option value="">Preencha:</option>  
+          <option value="galao-oleo-18l">Galão de Oléo 18L</option>
+          <option value="lata-oleo-18l">Lata de Oléo 18L</option>
+        </select> 
+
+        <label for="ProductsQuantity">Quantidade total: <span class="required">*</span></label>
+        <input type="number" id="ProductsQuantity" placeholder="Quantidade:" required step="1" min="1">
+
+      <button id="buttonRegister" type="submit">Registrar</button>
     </div>
   </div>
-  <script src="../js/interactions/relatoryProducts/relatoryProductForm.js"></script>
+  <script src="../js/interactions/registerProduct/registerProductForm.js"></script>
 </body>
 </html>
