--- a/OilProject-FrontEnd/src/pages/removeProducts.html
+++ b/OilProject-FrontEnd/src/pages/removeProducts.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap">
-  <title>OilProject</title>
+  <title>OilProject - Saída</title>
 </head>
 
 <body>
   <div class="header-container">
     <div class="header">
       <a href="../../../index.html" class="mdi mdi-home homeButton" id="homeButton"></a>
-      <h1>OilProject</h1>
+      <h1 class="title">OilProject</h1>
     </div>
     <div class="header-inputs">
       <label for="ProductOption">Selecione o produto para saída: <span class="required">*</span></label>
