Atualização backend e ajustes etc etc

--- a/OilProject-FrontEnd/src/pages/generateRelatory.html
+++ b/OilProject-FrontEnd/src/pages/generateRelatory.html
@@ -22,6 +22,7 @@
         <option value="inflow">Entradas</option>
         <option value="outflow">Saídas</option>
         <option value="sale">Vendas</option>
+        <option value="register">Galões cheios</option>
         <option value="all">Todos</option>
       </select> 
 
