--- a/OilProject-FrontEnd/src/pages/moviProducts.html
+++ b/OilProject-FrontEnd/src/pages/moviProducts.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/addPageStyles/main.css">
+  <link rel="stylesheet" href="../css/moviPageStyles/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
@@ -23,10 +23,8 @@
       <div class="header-buttonse">
         <a href="addProducts.html"> <button id="buttonAddProduct">Entrada</button></a>
         <a href="removeProducts.html"> <button id="buttonRemoveProduct">Saída</button></a>
-        <a href="registerSell.html"> <button id="buttonRegisterSell">Registrar
-            venda</button></a>
+        <a href="registerSell.html"> <button id="buttonRegisterSell">Registrar venda</button></a>
         <a href="registerGallon.html"> <button id="buttonRedirectToHistory">Encher</button></a>
-
       </div>
     </div>
   </div>
